# python

./: .gitignore  IKPlannerFunctions.py  TrajectoryPlayback.py  launch.py
brett2/: PR2.py  __init__.py  base_trajectory_controller.py  controller_switching.py  mtf_trajectories.py  mytf.py  mytf.py.lprof  ros_utils.py  trajectories.py  urdf.py
brett2/test/: CMakeLists.txt  check_command_vs_actual.py  multidof_command_vs_actual.py  test_base_traj.py  test_draw_gripper.py  test_draw_robot.py  test_pr2.py  test_retiming.py  use_pr2_from.cpp
comm/: comm.py  comm_ros.py  delete_messages.py  mapper.py  pipeline.py  vision_pipeline.py
experiments/: ask_name.py  convexdecomp.py  discrete_matching.py  hash_problem.py  ik_soln_manifolds.py  initfromtrimesh.py  ipf.py  kinbody_from_point_cloud.py  make_robot_rope_dataset.py  make_tex_lines.py  mesh_test.py  minbox.py  multi_popen.py  numerically_check_arc_bound.py  posititions.npy  print_num.py  quaternion_derivatives.py  red_dot_calibration.py  registration1.py  registration_cups_3d.py  robot_gui.py  shared_dict_server.py  test_cloud.py  test_depth_image_edges.py  test_dionysus.py  test_kernel_centering.py  test_osgviewer.py  test_plan_traj.py  tps_shape_2d.py  tps_shape_3d.py  tps_shape_3da.py  xmlrpcclient.py  xmlrpcserver.py
image_proc/: alpha_shapes.py  annotation.py  calibrate_kinect_extrinsics.py  chessboards.py  classifiers.py  clouds.py  curves.py  cv_drawing.py  interactive_roi.py  interactive_seg.py  mlabraw_image_processing.py  pcd_io.py  pcl_utils.py  ransac.py  rope_init_from_cloud.py  rope_initialization.py  (+3 more)
(+400 files in other folders)
